--- a/P.html
+++ b/P.html
@@ -53,15 +53,19 @@
    </form>
 
    <table id="table" width = "50%">
-    <tr>
+    <thead>
         <td>titlle</td>
         <td>author</td>
         <td>price</td>
         <td>date</td>
+        <td>email</td>
         <td>language</td>
         <td>type</td>
         <td>delete</td>
-    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
   </table>
 
    <script src="P.js"></script>
