--- a/P.html
+++ b/P.html
@@ -53,21 +53,24 @@
    </form>
    <p id="prf"></p>
 
-   <table id="table" width = "50%">
-    <thead>
-        <td>titlle</td>
-        <td>author</td>
-        <td>price</td>
-        <td>date</td>
-        <td>email</td>
-        <td>language</td>
-        <td>type</td>
-        <td>delete</td>
-    </thead>
-    <tbody>
-
-    </tbody>
-  </table>
+   <div id="print_div">
+    <table id="table" width = "50%">
+        <thead>
+            <td>titlle</td>
+            <td>author</td>
+            <td>price</td>
+            <td>date</td>
+            <td>email</td>
+            <td>language</td>
+            <td>type</td>
+            <td>delete</td>
+        </thead>
+        <tbody>
+    
+        </tbody>
+      </table>
+   </div>
+   <input type="button" value="print" onclick="printDiv()" id="print">
 
    <script src="P.js"></script>
 </body>
